# CourseWork3

./: .env.example  README.md  main.py  my_report.json  pyproject.toml  requirements.txt
data/: operations.xls
src/: reports.py  services.py  utils.py  views.py
tests/: my_report.json  test_reports.py  test_services.py  test_utils.py  test_views.py
